--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@sendgrid/mail": "^7.7.0",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1381.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemailer": "^6.9.2",
     "serverless-http": "^3.2.0"
